--- a/MavenProject/pom.xml
+++ b/MavenProject/pom.xml
@@ -18,6 +18,14 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/cobertura-maven-plugin -->
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.7</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -79,17 +87,8 @@
 
 
 
-	    <plugin>
-    		<groupId>org.codehaus.mojo</groupId>
-    		<artifactId>cobertura-maven-plugin</artifactId>
-            <version>2.7</version>
-    		<configuration>
-       		    <formats>
-           		<format>html</format>
-           		<format>xml</format>
-       		    </formats>
-    		</configuration>
-	    </plugin>
+
+
 	    <plugin>
     		<groupId>org.apache.tomcat.maven</groupId>
     		<artifactId>tomcat7-maven-plugin</artifactId>
