--- a/MavenProject/pom.xml
+++ b/MavenProject/pom.xml
@@ -74,6 +74,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>tools</artifactId>
