--- a/MavenProject/multi1/pom.xml
+++ b/MavenProject/multi1/pom.xml
@@ -44,18 +44,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-
-                <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                </configuration>
-            </plugin>
 
         </plugins>
     </build>
@@ -97,6 +85,18 @@
             <version>5.9</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
+        <dependency>
+            <groupId>net.sourceforge.cobertura</groupId>
+            <artifactId>cobertura</artifactId>
+            <version>2.1.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+    '<!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
+
+
 
 </project>
