--- a/MavenProject/multi1/pom.xml
+++ b/MavenProject/multi1/pom.xml
@@ -87,13 +87,14 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
         <dependency>
-            <groupId>net.sourceforge.cobertura</groupId>
-            <artifactId>cobertura</artifactId>
-            <version>2.1.1</version>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.7</version>
             <scope>test</scope>
         </dependency>
 
     </dependencies>
+
 
     '<!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
 
