--- a/MavenProject/multi1/pom.xml
+++ b/MavenProject/multi1/pom.xml
@@ -44,7 +44,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 
@@ -85,19 +84,13 @@
             <version>5.9</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
+
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>cobertura-maven-plugin</artifactId>
             <version>2.7</version>
-
+            <scope>test</scope>
         </dependency>
-
     </dependencies>
-
-
-    '<!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
-
-
 
 </project>
