--- a/javancss-master/pom.xml
+++ b/javancss-master/pom.xml
@@ -226,6 +226,7 @@
           <artifactId>maven-gpg-plugin</artifactId>
           <version>1.5</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
@@ -246,6 +247,15 @@
               <artifactId>wagon-webdav-jackrabbit</artifactId>
               <version>2.6</version>
             </dependency>
+
+              <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+              <dependency>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.10.0.2594</version>
+              </dependency>
+
+
           </dependencies>
         </plugin>
         <plugin>
@@ -488,6 +498,9 @@
         <artifactId>jdepend-maven-plugin</artifactId>
         <version>2.0</version>
       </plugin>
+      <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+
+
       <!--<plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
@@ -496,6 +509,8 @@
           <excludeFilterFile>src/site/findbugs-exclude.xml</excludeFilterFile>
         </configuration>
       </plugin>-->
+
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>javacc-maven-plugin</artifactId>
