--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,8 +4,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>maven-project</groupId>
-    <artifactId>maven-project</artifactId>
+    <groupId>webapp</groupId>
+    <artifactId>webapp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
